# bazel-python-issue

./: .bazelrc  BUILD  MODULE.bazel  main.py  requirements.in
